cases/12785940/main-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: mainboard
spec:
 tls:
 - secretName: nginx-ssl
 backend:
   serviceName: mainboard
   servicePort: https-port
